# garni-rs

./: .gitignore  Cargo.toml  Readme.md  config.toml  flake.nix  rust-toolchain.toml
nix/: nixos-module.nix
src/: conversion.rs  domain.rs  handler.rs  main.rs  model.rs  route.rs
src/domain/: config.rs  conversion.rs
src/server/: config.rs  handler.rs
