[package]
name = "garni-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["cors", "trace", "add-extension"] }
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.4"
tracing = "0.1.44"
tower = { version = "0.5.3", features = ["timeout", "load-shed", "limit"] }
axum-macros = "0.5.1"
log = "0.4.33"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
